# communication

./: README.md
communication/virtual serial port/upper computer/robot_serial/: CMakeLists.txt  up.sh
communication/virtual serial port/upper computer/robot_serial/include/chassis_serial_driver/: packet.hpp
communication/virtual serial port/upper computer/robot_serial/launch/: serial_driver.launch.py
communication/virtual serial port/upper computer/robot_serial/src/: chassis_serial_driver.cpp
net gape/upper computer/: CMakeLists.txt  package.xml
net gape/upper computer/include/: net_gape.h
net gape/upper computer/src/: up.c++
